--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "displayName": "paste-url-md",
   "publisher": "c1495616js",
   "description": "Paste the link on markdown easier when select the test.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/c1495616js/paste-url-md"
+  },
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.70.0"
