--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "paste-url-md",
   "displayName": "paste-url-md",
   "publisher": "c1495616js",
+  "icon": "imag/extension-logo.png",
   "description": "Paste the link on markdown easier when select the test.",
   "repository": {
     "type": "git",
